fixed issue with restore settings button, updated build system

--- a/style/codemirror-darcula.css
+++ b/style/codemirror-darcula.css
@@ -80,3 +80,9 @@ fix: annoying problem of almost invisible text in stderr */
     color: #9C9E9E !important;
 }
 */
+
+/* override - settings restore button */
+.jp-SettingsHeader-buttonbar > .jp-RestoreButton {
+    color: var(--jp-content-link-color);
+}
+
