fixed issues with build system and introduced fix to the output scrolling in jupyterlab output cells

--- a/style/custom.css
+++ b/style/custom.css
@@ -1,7 +1,7 @@
-/*-----------------------------------------------------------------------------
+/* -----------------------------------------------------------------------------
 | Copyright (c) Max Klein.
 | Distributed under the terms of the Modified BSD License.
-|----------------------------------------------------------------------------*/
+|---------------------------------------------------------------------------- */
 
 /*
  * Codemirror styling that isn't currently supported by Jupyterlab themes
@@ -10,21 +10,26 @@
 /* text rendered in stderr with keyword highlight
 fix: annoying problem of almost invisible text in stderr */
 .jp-RenderedText pre .ansi-yellow-bg {
-    background-color: #b52318;
+  background-color: #b52318;
 }
 
+/* stylelint-disable selector-class-pattern */
 .cm-s-jupyter .CodeMirror-activeline-background {
   background: #323232;
 }
+
 .cm-s-jupyter .CodeMirror-guttermarker {
   color: #ffee80;
 }
+
 .cm-s-jupyter .CodeMirror-guttermarker-subtle {
   color: #d0d0d0;
 }
+
 .cm-s-jupyter .CodeMirror-linenumber {
   color: #606366;
 }
+
 .cm-s-jupyter .CodeMirror-matchingbracket {
   background-color: #3b514d;
   color: #ffef28 !important;
@@ -34,9 +39,10 @@ fix: annoying problem of almost invisible text in stderr */
 .cm-s-jupyter div.CodeMirror-selected {
   background: #214283;
 }
+/* stylelint-enable selector-class-pattern */
 
 .cm-s-jupyter span.cm-type {
-  color: #aabbcc;
+  color: #abc;
   font-weight: bold;
 }
 
@@ -83,6 +89,23 @@ fix: annoying problem of almost invisible text in stderr */
 
 /* override - settings restore button */
 .jp-SettingsHeader-buttonbar > .jp-RestoreButton {
-    color: var(--jp-content-link-color);
+  color: var(--jp-content-link-color);
 }
 
+.jp-OutputArea-child,
+.jp-OutputArea-output,
+.jp-Cell-outputArea,
+.jp-OutputArea-output.jp-OutputArea-executeResult {
+  max-height: none !important;
+  overflow: visible !important;
+}
+
+.jp-Cell.jp-mod-outputsScrolled .jp-Cell-outputArea {
+  max-height: none !important;
+}
+
+.jp-OutputArea {
+  overflow: visible !important;
+}
+
+/* EOF */
