--- a/style/variables.css
+++ b/style/variables.css
@@ -1,7 +1,7 @@
-/*-----------------------------------------------------------------------------
+/* -----------------------------------------------------------------------------
 | Copyright (c) Max Klein.
 | Distributed under the terms of the Modified BSD License.
-|----------------------------------------------------------------------------*/
+|---------------------------------------------------------------------------- */
 
 /*
 The following CSS variables define the main, public API for styling JupyterLab.
@@ -55,31 +55,40 @@ all of MD as it is not optimized for dense, information rich UIs.
     0.12
   );
   --jp-elevation-z0: none;
-  --jp-elevation-z1: 0px 2px 1px -1px var(--jp-shadow-umbra-color),
+  --jp-elevation-z1:
+    0px 2px 1px -1px var(--jp-shadow-umbra-color),
     0px 1px 1px 0px var(--jp-shadow-penumbra-color),
     0px 1px 3px 0px var(--jp-shadow-ambient-color);
-  --jp-elevation-z2: 0px 3px 1px -2px var(--jp-shadow-umbra-color),
+  --jp-elevation-z2:
+    0px 3px 1px -2px var(--jp-shadow-umbra-color),
     0px 2px 2px 0px var(--jp-shadow-penumbra-color),
     0px 1px 5px 0px var(--jp-shadow-ambient-color);
-  --jp-elevation-z4: 0px 2px 4px -1px var(--jp-shadow-umbra-color),
+  --jp-elevation-z4:
+    0px 2px 4px -1px var(--jp-shadow-umbra-color),
     0px 4px 5px 0px var(--jp-shadow-penumbra-color),
     0px 1px 10px 0px var(--jp-shadow-ambient-color);
-  --jp-elevation-z6: 0px 3px 5px -1px var(--jp-shadow-umbra-color),
+  --jp-elevation-z6:
+    0px 3px 5px -1px var(--jp-shadow-umbra-color),
     0px 6px 10px 0px var(--jp-shadow-penumbra-color),
     0px 1px 18px 0px var(--jp-shadow-ambient-color);
-  --jp-elevation-z8: 0px 5px 5px -3px var(--jp-shadow-umbra-color),
+  --jp-elevation-z8:
+    0px 5px 5px -3px var(--jp-shadow-umbra-color),
     0px 8px 10px 1px var(--jp-shadow-penumbra-color),
     0px 3px 14px 2px var(--jp-shadow-ambient-color);
-  --jp-elevation-z12: 0px 7px 8px -4px var(--jp-shadow-umbra-color),
+  --jp-elevation-z12:
+    0px 7px 8px -4px var(--jp-shadow-umbra-color),
     0px 12px 17px 2px var(--jp-shadow-penumbra-color),
     0px 5px 22px 4px var(--jp-shadow-ambient-color);
-  --jp-elevation-z16: 0px 8px 10px -5px var(--jp-shadow-umbra-color),
+  --jp-elevation-z16:
+    0px 8px 10px -5px var(--jp-shadow-umbra-color),
     0px 16px 24px 2px var(--jp-shadow-penumbra-color),
     0px 6px 30px 5px var(--jp-shadow-ambient-color);
-  --jp-elevation-z20: 0px 10px 13px -6px var(--jp-shadow-umbra-color),
+  --jp-elevation-z20:
+    0px 10px 13px -6px var(--jp-shadow-umbra-color),
     0px 20px 31px 3px var(--jp-shadow-penumbra-color),
     0px 8px 38px 7px var(--jp-shadow-ambient-color);
-  --jp-elevation-z24: 0px 11px 15px -7px var(--jp-shadow-umbra-color),
+  --jp-elevation-z24:
+    0px 11px 15px -7px var(--jp-shadow-umbra-color),
     0px 24px 38px 3px var(--jp-shadow-penumbra-color),
     0px 9px 46px 8px var(--jp-shadow-ambient-color);
 
@@ -106,13 +115,13 @@ all of MD as it is not optimized for dense, information rich UIs.
    */
 
   --jp-ui-font-scale-factor: 1.2;
-  --jp-ui-font-size0: 0.83333em;
+  --jp-ui-font-size0: 0.8333em;
   --jp-ui-font-size1: 13px; /* Base font size */
   --jp-ui-font-size2: 1.2em;
   --jp-ui-font-size3: 1.44em;
-
-  --jp-ui-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --jp-ui-font-family:
+    -apple-system, blinkmacsystemfont, 'Segoe UI', helvetica, arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
   /*
    * Use these font colors against the corresponding main layout colors.
@@ -125,6 +134,7 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-ui-font-color3: rgb(90, 90, 90);
 
   /* Defaults use Material Design specification */
+
   /*
    * --jp-ui-font-color0: #a9b7c6;
    * --jp-ui-font-color1: var(--md-grey-300);
@@ -158,7 +168,7 @@ all of MD as it is not optimized for dense, information rich UIs.
 
   --jp-content-line-height: 1.6;
   --jp-content-font-scale-factor: 1.2;
-  --jp-content-font-size0: 0.83333em;
+  --jp-content-font-size0: 0.8333em;
   --jp-content-font-size1: 14px; /* Base font size */
   --jp-content-font-size2: 1.2em;
   --jp-content-font-size3: 1.44em;
@@ -167,7 +177,6 @@ all of MD as it is not optimized for dense, information rich UIs.
 
   /* This gives a magnification of about 125% in presentation mode over normal. */
   --jp-content-presentation-font-size1: 1.25em;
-
   --jp-content-heading-line-height: 1;
   --jp-content-heading-margin-top: 1.2em;
   --jp-content-heading-margin-bottom: 0.8em;
@@ -178,12 +187,10 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-content-font-color1: rgba(187, 187, 187, 1);
   --jp-content-font-color2: rgba(187, 187, 187, 0.7);
   --jp-content-font-color3: rgba(187, 187, 187, 0.5);
-
   --jp-content-link-color: var(--md-blue-300);
-
-  --jp-content-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  --jp-content-font-family:
+    -apple-system, blinkmacsystemfont, 'Segoe UI', helvetica, arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
   /*
    * Code Fonts
@@ -194,18 +201,19 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-code-font-size: 15px;
   --jp-code-line-height: 1.3077; /* 17px for 15px base */
   --jp-code-padding: 0.385em; /* 5px for 15px base */
-  --jp-code-font-family-default: Consolas, Menlo, Monaco, "Lucida Console",
-    "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono",
-    "Courier New", monospace, serif;
+  --jp-code-font-family-default:
+    consolas, menlo, monaco, 'Lucida Console', 'Liberation Mono',
+    'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New', monospace,
+    serif;
   --jp-code-font-family: var(--jp-code-font-family-default);
 
   /* This gives a magnification of about 125% in presentation mode over normal. */
   --jp-code-presentation-font-size: 1.25em;
 
   /* may need to tweak cursor width if you change font size */
-  --jp-code-cursor-width0: 2px; /*0.107em;*/
-  --jp-code-cursor-width1: 3px; /*0.154em;*/
-  --jp-code-cursor-width2: 6px; /*0.308em;*/
+  --jp-code-cursor-width0: 2px; /* 0.107em; */
+  --jp-code-cursor-width1: 3px; /* 0.154em; */
+  --jp-code-cursor-width2: 6px; /* 0.308em; */
 
   /* Layout
    *
@@ -214,10 +222,10 @@ all of MD as it is not optimized for dense, information rich UIs.
    */
 
   --jp-layout-color0: #2b2b2b;
-  --jp-layout-color1: #313335; /*var(--md-grey-900);*/
-  --jp-layout-color2: #3c3f41; /*var(--md-grey-800);*/
-  --jp-layout-color3: #555758; /*var(--md-grey-700);*/
-  --jp-layout-color4: #626465; /*var(--md-grey-600);*/
+  --jp-layout-color1: #313335; /* var(--md-grey-900); */
+  --jp-layout-color2: #3c3f41; /* var(--md-grey-800); */
+  --jp-layout-color3: #555758; /* var(--md-grey-700); */
+  --jp-layout-color4: #626465; /* var(--md-grey-600); */
   --jp-layout-color5: #a9b7c6;
 
   /* Inverse Layout
@@ -239,7 +247,6 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-brand-color2: var(--md-blue-300);
   --jp-brand-color3: var(--md-blue-100);
   --jp-brand-color4: var(--md-blue-50);
-
   --jp-accent-color0: var(--md-green-700);
   --jp-accent-color1: var(--md-green-500);
   --jp-accent-color2: var(--md-green-300);
@@ -251,17 +258,14 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-warn-color1: var(--md-orange-500);
   --jp-warn-color2: var(--md-orange-300);
   --jp-warn-color3: var(--md-orange-100);
-
   --jp-error-color0: var(--md-red-700);
   --jp-error-color1: var(--md-red-500);
   --jp-error-color2: var(--md-red-300);
   --jp-error-color3: var(--md-red-100);
-
   --jp-success-color0: var(--md-green-700);
   --jp-success-color1: var(--md-green-500);
   --jp-success-color2: var(--md-green-300);
   --jp-success-color3: var(--md-green-100);
-
   --jp-info-color0: var(--md-cyan-700);
   --jp-info-color1: var(--md-cyan-500);
   --jp-info-color2: var(--md-cyan-300);
@@ -270,17 +274,14 @@ all of MD as it is not optimized for dense, information rich UIs.
   /* Cell specific styles */
 
   --jp-cell-padding: 5px;
-
   --jp-cell-collapser-width: 8px;
   --jp-cell-collapser-min-height: 20px;
   --jp-cell-collapser-not-active-hover-opacity: 0.6;
-
   --jp-cell-editor-background: var(--jp-layout-color1);
   --jp-cell-editor-border-color: var(--md-grey-700);
   --jp-cell-editor-box-shadow: inset 0 0 2px var(--md-blue-300);
   --jp-cell-editor-active-background: var(--jp-layout-color0);
   --jp-cell-editor-active-border-color: var(--jp-brand-color1);
-
   --jp-cell-prompt-width: 64px;
   --jp-cell-prompt-font-family: var(--jp-code-font-family);
   --jp-cell-prompt-letter-spacing: 0px;
@@ -291,6 +292,7 @@ all of MD as it is not optimized for dense, information rich UIs.
   /* A custom blend of MD grey and blue 600
    * See https://meyerweb.com/eric/tools/color-blend/#546E7A:1E88E5:5:hex */
   --jp-cell-inprompt-font-color: #307fc1;
+
   /* A custom blend of MD grey and orange 600
    * https://meyerweb.com/eric/tools/color-blend/#546E7A:F4511E:5:hex */
   --jp-cell-outprompt-font-color: #bf5b3d;
@@ -334,8 +336,9 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-toolbar-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.8);
   --jp-toolbar-header-margin: 4px 4px 0px 4px;
   --jp-toolbar-active-background: var(--jp-layout-color0);
-
-  --jp-accept-color-hover: var(--jp-brand-color0); /* added as of JL4.3, hover color for + button */
+  --jp-accept-color-hover: var(
+    --jp-brand-color0
+  ); /* added as of JL4.3, hover color for + button */
 
   /* Statusbar specific styles */
 
@@ -355,7 +358,7 @@ all of MD as it is not optimized for dense, information rich UIs.
 
   --jp-editor-selected-background: var(--jp-layout-color2);
   --jp-editor-selected-focused-background: #214283;
-  --jp-editor-cursor-color: #a9b7c6; /*{ border-left: 1px solid var(--jp-ui-font-color0) };*/
+  --jp-editor-cursor-color: #a9b7c6; /* { border-left: 1px solid var(--jp-ui-font-color0) }; */
 
   /*
   .cm-s-darcula .CodeMirror-cursor { border-left: 1px solid #A9B7C6; }
@@ -428,13 +431,10 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-mirror-editor-bracket-color: #a9b7c6;
   --jp-mirror-editor-tag-color: #629755;
   --jp-mirror-editor-attribute-color: #6897bb;
-
   --jp-mirror-editor-header-color: var(--md-blue-500);
   --jp-mirror-editor-quote-color: var(--md-green-300);
-
   --jp-mirror-editor-link-color: #cc7832;
   --jp-mirror-editor-error-color: #bc3f3c;
-
   --jp-mirror-editor-hr-color: #999;
 
   /* Vega extension styles */
@@ -460,7 +460,8 @@ all of MD as it is not optimized for dense, information rich UIs.
   /* scrollbar related styles. Supports every browser except Edge. */
 
   --jp-scrollbar-background-color: #3f4244;
-  --jp-scrollbar-thumb-color: 88, 96, 97; /* need to specify thumb color as an RGB triplet */
+  --jp-scrollbar-thumb-color:
+    88, 96, 97; /* need to specify thumb color as an RGB triplet */
 
   --jp-scrollbar-endpad: 3px; /* the minimum gap between the thumb and the ends of a scrollbar */
 
